--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <div>
           <label for="num-dogs">Enter number of random dogs: </label>
           <input type="text" name="name" id="num-dogs" value = "3" required>
+          <button type="submit" form="dogform" value="Submit">Submit</button>
         </div>
     </form>
-    <button type="submit" form="dogform" value="Submit">Submit</button>
+    
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
