finished simple GET requests 2

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
           <button type="submit" form="dogform" value="Submit">Submit</button>
         </div>
     </form>
+
+    <div class="container">
+
+    </div>
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
+
+<img src="" alt="">
