added random dog breed functionality

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <form action="" method="get" id="dogform">
         <div>
-          <label for="num-dogs">Enter number of random dogs: </label>
-          <input type="text" name="name" id="num-dogs" value = "3" required>
+          <label for="breed">Enter breed: </label>
+          <input type="text" name="name" id="breed" required>
           <button type="submit" form="dogform" value="Submit">Submit</button>
         </div>
     </form>
